<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chen.zheng.gifdecodeencode.MainActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/big_gif_image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/big_gif" />

        <TextView
            android:id="@+id/after_convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/big_gif_image"
            android:layout_centerHorizontal="true"
            android:text="@string/after_convert" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/small_gif_image"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_below="@+id/after_convert"
            android:layout_centerHorizontal="true"
            android:src="@drawable/small_gif" />
    </RelativeLayout>

    <TextView
        android:id="@+id/convert_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/convert_size"
        android:layout_centerHorizontal="true"
        android:text="path:xxxxxxx"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/convert_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reconvert_button"
        android:layout_centerHorizontal="true"
        android:text="Size:xxxxx"
        android:visibility="gone"/>

    <Button
        android:id="@+id/reconvert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gif_choose_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/grassgreen"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/reconvert"
        android:visibility="gone"/>

    <Button
        android:id="@+id/gif_choose_button"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@color/mediumturquoise"
        android:text="@string/choose_a_gif"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <!--android:background="@drawable/bg_anim"-->
</RelativeLayout>
